# lsst_versions

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  docstyle.yaml  formatting.yaml  lint.yaml  mypy.yaml
doc/: conf.py  index.rst
doc/changes/: DM-32408.feature.rst  DM-35064.api.rst  DM-35064.feature.rst  DM-35064.misc.rst
doc/lsst_versions/: CHANGES.rst  configuring.rst  index.rst
python/lsst_versions/: __init__.py  _cmd.py  _versions.py
tests/: test-repo.tgz  test_pyproject.toml  test_versions.py
tests/data/no-write-pyproject/: pyproject.toml
tests/data/pyproject/: pyproject.toml
tests/data/pyproject/python/other.egg-info/: PKG-INFO
tests/data/something.egg-info/: PKG-INFO
ups/: lsst_versions.table
