[metadata]
name = lsst_versions
description = Calculate package versions following LSST code conventions.
author = Rubin Observatory Data Management
url = https://github.com/lsst/lsst_versions
classifiers =
    License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
version = attr: lsst_versions.__version__
readme = file: README.md

[options]
# zip_safe can't be used for mypy compatibility
zip_safe = False
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  setuptools >= 46.0
  tomli>1.0.0
  GitPython >= 3.1
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4
  pytest-openfiles >= 0.5.0

[options.packages.find]
where=python

[options.package_data]
lsst_versions = py.typed

[options.entry_points]
setuptools.finalize_distribution_options =
    lsst_versions = lsst_versions:infer_version_for_setuptools


[pydocstyle]
convention = numpy
# Our coding style does not require docstrings for magic methods (D105)
# Our docstyle documents __init__ at the class level (D107)
# We allow methods to inherit docstrings and this is not compatible with D102.
# Docstring at the very first line is not required
# D200, D205 and D400 all complain if the first sentence of the docstring does
# not fit on one line.
add-ignore = D107, D105, D102, D100, D200, D205, D400

# The ignore list for flake8 itself when run on the command line is distinct
# from the ignore list used by the pytest-flake8 plugin. This provides more
# control over testing but does require that the lists are kept in sync
# if there are later changes to the developer guide standard.
[flake8]
max-line-length = 110
max-doc-length = 79
ignore = W503, E203
exclude = __init__.py

[tool:pytest]
addopts = --flake8
flake8-ignore = W503 E203
